finder-app Makefile new syntax

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,5 +1,24 @@
-all: writer
-writer: writer.c
-	$(CROSS_COMPILE)gcc -Wall -Wextra writer.c -o writer
+CC      := $(CROSS_COMPILE)gcc
+CFLAGS  ?= -Wall -Wextra -Werror -g
+LDFLAGS ?=
+
+TARGET  := writer
+SRCS    := writer.c
+OBJS    := $(SRCS:.c=.o)
+
+.PHONY: all clean
+
+# Default target
+all: $(TARGET)
+
+# Link
+$(TARGET): $(OBJS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+# Compile
+%.o: %.c
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+# Clean artifacts
 clean:
-	rm -f writer
+	rm -f $(TARGET) $(OBJS)
